Component in reactJs

--- a/jQuery/css/style.css
+++ b/jQuery/css/style.css
@@ -21,3 +21,14 @@ p{
     background-color: #d3d3d3;
     z-index: 1;
 }
+.a{
+    width: 100px;
+    height: 100px;
+    display: grid;
+    grid-row: auto;
+    background-color: blue;
+    margin: 5px;
+}
+.a:last-child{
+    background-color: green !important;
+}
